--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<!--Enable MathJax-->
+<!--Enable MathJax
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({
     tex2jax: {
@@ -15,7 +15,7 @@ layout: default
 <script type="text/javascript"
     src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
-<!--Enable MathJax-->
+Enable MathJax-->
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
