--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,17 @@ Enable MathJax-->
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}</span>
+  <span class="post-date">{{ page.date | date_to_string }}
+
+  <span class="post-tag-box" style="display:inline-block;">
+  {% if page.tags %} |
+  {% for tag in page.tags %}
+  <a href="/blog/tag/#{{ tag | slugify }}">{{ tag }}</a>
+  {% endfor %}
+  {% endif %}
+  </span>
+  </span>
+
   {{ content }}
 </div>
 
