--- a/public/css/main.css
+++ b/public/css/main.css
@@ -164,7 +164,40 @@ h6 {
   font-size: 0.75rem;
 }
 
+/* Headings */
+h1, h2, h3, h4, h5, h6 {
+  margin-bottom: .5rem;
+  font-weight: bold;
+  line-height: 1.25;
+  color: #313131;
+  text-rendering: optimizeLegibility;
+}
+h1 {
+margin-top: 1.5rem;
+  font-size: 1.5rem;
+}
+h2 {
+  margin-top: 1rem;
+  font-size: 1.25rem;
+}
+h3 {
+  margin-top: 1.5rem;
+  font-size: 1rem;
+}
+h4, h5, h6 {
+  margin-top: 1rem;
+  font-size: 1rem;
+}
 
+h5 {
+  margin-top: 1rem;
+  font-size: 0.85rem;
+}
+
+h6 {
+  margin-top: 1rem;
+  font-size: 0.75rem;
+}
 
 /* Code */
 code,
