--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -4,7 +4,7 @@ $fontMonospace: "Consolas", Liberation Mono, Menlo, Courier, monospace
 $alpha: #666
 $beta: #222
 $gama: #aaa
-$delta: #091f5f
+$delta: #808080
 $epsilon: #ededed
 
 $mobile: "only screen and (max-width: 400px)"
