--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,22 @@
    or page.title == "Search"
 %}{% assign showHeader = true %}{% endif %}
 
+<!--Enable MathJax-->
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+  tex2jax: {
+    inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+    processEscapes: true
+  }
+});
+</script>
+
+<script type="text/javascript"
+src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
+<!--Enable MathJax-->
+
+
 {% if showHeader == true %}
     <header class="header-home {% if site.animation %}animated{% endif %}">
         {% if site.about %}
