--- a/_includes/related.html
+++ b/_includes/related.html
@@ -4,20 +4,22 @@
         {% assign postHasSimilar = false %}
         {% for tag in post.tags %}
             {% for thisTag in page.tags %}
-                {% if postHasSimilar == false and hasSimilar.size < 5 and post != page and tag == thisTag %}
-                    {% if hasSimilar.size == 0 %}
-                    <h4>Related Posts</h4>
-                    <ul>
-                    {% endif %}
-                    <li class="relatedPost">
-                        <a href="{{ site.url }}{{ post.url }}" style="text-decoration:none;">{{ post.title }}
-                        {% if post.series %}
-                            (Series: {{ post.series }})
+                {% if post.hidden != true %}
+                    {% if postHasSimilar == false and hasSimilar.size < 5 and post != page and tag == thisTag %}
+                        {% if hasSimilar.size == 0 %}
+                        <h4>Related Posts</h4>
+                        <ul>
                         {% endif %}
-                        </a>
-                    </li>
-                    {% capture hasSimilar %}{{ hasSimilar }}*{% endcapture %}
-                    {% assign postHasSimilar = true %}
+                        <li class="relatedPost">
+                            <a href="{{ site.url }}{{ post.url }}" style="text-decoration:none;">{{ post.title }}
+                            {% if post.series %}
+                                (Series: {{ post.series }})
+                            {% endif %}
+                            </a>
+                        </li>
+                        {% capture hasSimilar %}{{ hasSimilar }}*{% endcapture %}
+                        {% assign postHasSimilar = true %}
+                    {% endif %}
                 {% endif %}
             {% endfor %}
         {% endfor %}
