--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,6 +11,7 @@
             <li class="item">
                 <a class="link" href="{{ site.url }}/">Home</a>
                 <a class="link" href="{{ site.url }}/blog">Blog</a>
+                <a class="link" href="{{ site.url }}/guides">Guides</a>
                 <a class="link" href="{{ site.url }}/categories">Categories</a>
                 <a class="link" href="{{ site.url }}/tags">Tags</a>
                 <a class="link" href="{{ site.url }}/about">About</a>
