--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,6 +3,7 @@
         {% if page.title == "Home" %}
             <li class="item">
                 <a class="link" href="{{ site.url }}/blog">Blog</a>
+                <a class="link" href="{{ site.url }}/guides">Guides</a>
                 <a class="link" href="{{ site.url }}/about">About</a>
             </li>
         {% endif %}
