--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -66,6 +66,8 @@ layout: page
     {% include disqus.html %}
 {% endif %}
 
+{% include disqus.html %}
+
 <div id="disqus_thread"></div>
 <script>
 
@@ -86,4 +88,3 @@ s.setAttribute('data-timestamp', +new Date());
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-                            
