--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,6 +36,9 @@ layout: page
     </div>
 {% endif %}
 
+{% include disqus.html %}
+
+
 {% if site.related %}
     {% include related.html %}
 {% endif %}
